--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -15,6 +15,7 @@
     <Compile Remove="Models\WorkersSecondNameViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="1.16.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
